static/documentation/mocha/5.5.2/python-reference/_sources/mocha/project/GlobalFunctions.txt
.. module:: mocha.project

Global functions
****************

.. container:: function_list

*    :func:`mocha.project.set_license_search_path`
*    :func:`mocha.project.get_license_path`
*    :func:`mocha.project.get_current_project`


Detailed Description
--------------------

.. function:: mocha.project.set_license_search_path(path)

        :type path: unicode


        
        :param path: New license search path.
        
        Sets the current license directory path. By default it equals to installed mocha license path.
        

.. function:: mocha.project.get_license_path()

        :rtype: unicode


        
        Returns the current license directory path. By default it equals to installed mocha license path.
        

.. function:: mocha.project.get_current_project()

        :rtype: :class:`mocha.project.Project`


        
        Returns the current open project. Use it only in init.py script to get the current open project.
        

